@@ -11,36 +11,28 @@
 	</parent>
 	<artifactId>org.eclipse.epsilon.test</artifactId>
 	<packaging>${packaging.type}</packaging>
-
 	<build>
 		<testSourceDirectory>${project.basedir}/src</testSourceDirectory>
 		<testOutputDirectory>${project.basedir}/target/classes</testOutputDirectory>
 	</build>
-
+	<properties>
+		<osSpecificVMArgs />
+		<packaging.type>eclipse-plugin</packaging.type>
+	</properties>
 	<dependencies>
 		<dependency>
-		  <groupId>junit</groupId>
-		  <artifactId>junit</artifactId>
-		  <version>4.13.2</version>
-		  <scope>test</scope>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
+			<scope>test</scope>
 		</dependency>
-  	</dependencies>
-
+	</dependencies>
 	<profiles>
-		<profile>
-			<id>plugin-build</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<properties>
-				<packaging.type>eclipse-plugin</packaging.type>
-			</properties>
-		</profile>
 		<profile>
 			<id>plugged</id>
 			<activation>
 				<activeByDefault>false</activeByDefault>
-            </activation>
+			</activation>
 			<build>
 				<plugins>
 					<plugin>
@@ -49,6 +41,7 @@
 						<version>${tycho.version}</version>
 						<configuration>
 							<application>org.eclipse.ui.ide.workbench</application>
+							<argLine>-ea -Xmx2g ${osSpecificVMArgs}</argLine>
 							<useUIThread>true</useUIThread>
 							<useUIHarness>true</useUIHarness>
 							<includes>
@@ -70,12 +63,11 @@
 									<artifactId>org.eclipse.jdt.ui</artifactId>
 									<version>0.0.0</version>
 								</dependency>
-
 								<!--
-										This is needed to have the EUnit custom non-OSGi comparator
-										test pass: Tycho doesn't automatically use it, even though
-										it is a fragment of eunit.engine.
-								-->
+                    This is needed to have the EUnit custom non-OSGi comparator
+                    test pass: Tycho doesn't automatically use it, even though
+                    it is a fragment of eunit.engine.
+                -->
 								<dependency>
 									<type>eclipse-plugin</type>
 									<artifactId>org.eclipse.epsilon.eunit.engine.test.comparators</artifactId>
@@ -88,7 +80,6 @@
 			</build>
 			<properties>
 				<packaging.type>eclipse-test-plugin</packaging.type>
-				<argLine>-ea -Xmx2g</argLine>
 				<tests.skip.tests>false</tests.skip.tests>
 				<skipTests>${tests.skip.tests}</skipTests>
 			</properties>
@@ -96,7 +87,7 @@
 		<profile>
 			<id>ci</id>
 			<activation>
-                <activeByDefault>false</activeByDefault>
+				<activeByDefault>false</activeByDefault>
 			</activation>
 			<build>
 				<plugins>
@@ -128,7 +119,7 @@
 		<profile>
 			<id>unit</id>
 			<activation>
-                <activeByDefault>false</activeByDefault>
+				<activeByDefault>false</activeByDefault>
 			</activation>
 			<dependencies>
 				<dependency>
@@ -161,7 +152,18 @@
 			</build>
 			<properties>
 				<packaging.type>eclipse-plugin</packaging.type>
-				<argLine>-ea -Xms2g -Xmx6g</argLine>
+				<argLine>-ea -Xms2g -Xmx6g --add-opens=java.base/java.util.stream=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-exports=java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED</argLine>
+			</properties>
+		</profile>
+		<profile>
+			<id>osx</id>
+			<activation>
+				<os>
+					<family>mac</family>
+				</os>
+			</activation>
+			<properties>
+				<osSpecificVMArgs>-XstartOnFirstThread</osSpecificVMArgs>
 			</properties>
 		</profile>
 	</profiles>
